3 Aug 2009 (svn.debian.org/tux4kids - revision 1343)
[Sarah Frisk <ssfrisk@gmail.com> ]
	- Changed button sizes for the wordlist_button
	- Worked on fixing up program

3 Aug 2009 (svn.debian.org/tux4kids - revision 1337)
[Sarah Frisk <ssfrisk@gmail.com> ]
	-  Worked on the function to create new word list
	-  Added buttons

	-Code in editor.c is now active.
2 Aug 2009 (svn.debian.org/tux4kids - revision 1336)
[Sarah Frisk <ssfrisk@gmail.com> ]
	- Fixed drawing issues in editor.c, everything now draws correctly in the ChooseListToEdit(). 
	-Code in editor.c is now active.


02 Aug 2009 (svn.debian.org/tux4kids - revision 1334)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - ChooseListToEdit() and EditWordList() in editor.h/c now used by program, old functions
        commented out.  Code cleanup ongoing.  Added two more copies of NewWordList.png - to be
        edited into buttons for "Remove" and "Done". Editor page rearranged.

01 Aug 2009 (svn.debian.org/tux4kids - revision 1325)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Created files editor.h/c for word list editing code as titlescreen is really just
        supposed to be the menu system.  Copied ChooseFile() and ChooseWord() into these files
        and renamed them ChooseListToEdit() and EditWordList().  They are not yet active code.

30 Jun 2009 
[Sarah Frisk <ssfrisk@gmail.com> ]
	-Changed it so that wordlists are by the the name of the first word in file
	-Discovered what is causing images not showing up.  Apparently there is some memory issue that I've been working on for several days that causes any custom images not to appear when wordlists are added.  
	Line issue:  strncpy( fileNames[themes++], themesFile->d_name, FNLEN-1 );
	Commenting this out makes images show up again, but unfortunately makes the program unusable since we don't actually have a wordlist to work with.

20 July 2009
[Sarah Frisk <ssfrisk@gmail.com> ]
	-Started setting up visually the word list editor